--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,20 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=i7S4fKdEudNtudQbHhIP5cuzwonDy6pp
 
+# DB_HOST=160.153.16.53
 DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=ibetupze
+DB_USERNAME=ibetupze
+DB_PASSWORD=a6HTaTq.[0uI
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=mail.ibetup.eu
+MAIL_PORT=25
+MAIL_USERNAME=geral@ibetup.eu
+MAIL_PASSWORD=Ci{lz.T?wRp)
+MAIL_ENCRYPTION=
