--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.9.1"
+  },
+  "scripts": {
+    "watch": "gulp watch"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.0.0",
-    "express": "^4.13.3",
-    "laravel-elixir": "^2.0.0",
-    "redis": "^2.2.3",
+    "browser-sync": "2.11.1",
+    "gulp-connect-php": "0.0.7",
+    "gulp-less": "^3.0.5",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7"
   }
