--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "2.11.1",
     "gulp-connect-php": "0.0.7",
     "gulp-less": "^3.0.5",
+    "rxjs-es": "^5.0.0-beta.2",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7"
   }
