--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "typescript": "^1.9.0-dev.20160322"
   },
   "scripts": {
     "watch": "gulp watch"
