Added: Bulk invites to Gmail & Hotmail/Live user contacts list.

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,12 @@ DB_DATABASE=ibetupze
 DB_USERNAME=ibetupze
 DB_PASSWORD=a6HTaTq.[0uI
 
+DB_HOST=160.153.16.53
+DB_DATABASE=ibetupco
+DB_USERNAME=ibetupco
+DB_PASSWORD=rL;twb$~?fhI
+
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
