--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "Nathanmac/Parser": "3.*",
         "soapbox/laravel-formatter": "2.x",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "barryvdh/laravel-debugbar": "^2.2",
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
