--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "Nathanmac/Parser": "3.*",
         "soapbox/laravel-formatter": "2.x",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "barryvdh/laravel-debugbar": "^2.2",
+        "graham-campbell/exceptions": "^8.3",
+        "filp/whoops": "^2.1",
+        "itsgoingd/clockwork": "~1.11.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
