--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "barryvdh/laravel-debugbar": "^2.2",
         "graham-campbell/exceptions": "^8.3",
         "filp/whoops": "^2.1",
-        "itsgoingd/clockwork": "~1.11.1"
+        "itsgoingd/clockwork": "~1.11.1",
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -43,9 +44,6 @@
         "post-install-cmd": [
             "php artisan clear-compiled",
             "php artisan optimize"
-        ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
         ],
         "post-update-cmd": [
             "php artisan optimize"
