--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,7 @@
+# AuthType Basic
+# AuthName "Password Protected Area"
+# AuthUserFile /home/ibetup/public_html/casino/public/.htpasswd
+# Require valid-user
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
