--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "typescript": "^1.9.0-dev.20160322"
   },
   "scripts": {
     "watch": "gulp watch"
   },
   "dependencies": {
     "browser-sync": "2.11.1",
+    "gulp": "^3.9.1",
     "gulp-connect-php": "0.0.7",
     "gulp-less": "^3.0.5",
     "gulp-sourcemaps": "^1.6.0",
     "rxjs-es": "^5.0.0-beta.2",
     "socket.io": "^1.3.7",
-    "socket.io-client": "^1.3.7"
+    "socket.io-client": "^1.3.7",
+    "typescript": "^1.9.0-dev.20160322"
   }
 }
