--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "filp/whoops": "^2.1",
         "tymon/jwt-auth": "0.5.*",
         "itsgoingd/clockwork": "~1.11.1",
-        "doctrine/dbal": "v2.5.4"
+        "doctrine/dbal": "v2.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
