--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/framework": "5.1.*",      
         "paypal/rest-api-sdk-php": "*",
         "chencha/share": "^5.0",
-        "guzzlehttp/guzzle": "~5.0",
+        "guzzlehttp/guzzle": "6.*",
         "textalk/websocket": "1.0.*",
         "Nathanmac/Parser": "3.*",
         "soapbox/laravel-formatter": "2.x",
