Implemented Identity Webservice for Register.

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ MAIL_NAME=BetPortugal
 
 TEST_MAIL=jmiguelcouto@gmail.com
 TEST_MAIL_NAME=BetPortugal
+
+SRIJ_COMPANY_CODE=2215
+SRIJ_SELF_EXCLUSION=http://localgate.pt/ListaExcluidos.svc?singleWsdl
+SRIJ_IDENTITY=http://localgate.pt/ListaVerificaIdentidade.svc?singleWsdl
