--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ DB_PASSWORD=a6HTaTq.[0uI
 # DB_USERNAME=ibetupco
 # DB_PASSWORD=rL;twb$~?fhI
 
+DB_HOST=localhost
+DB_DATABASE=betportugal
+DB_USERNAME=root
+DB_PASSWORD=
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
