--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 /.gitignore
 /composer.lock
 /composer.phar
+/public/assets/portal/css/portal.css
+/public/assets/portal/css/bet-details.css
+/public/assets/portal/css/bet-details.css.map
+/public/assets/portal/css/portal.css.map
+/public/assets/portal/css/sports.css
+/public/assets/portal/css/sports.css.map
