--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@ DB_DATABASE=ibetupze
 DB_USERNAME=ibetupze
 DB_PASSWORD=a6HTaTq.[0uI
 
-# DB_HOST=160.153.16.53
-# DB_DATABASE=ibetupco
-# DB_USERNAME=ibetupco
-# DB_PASSWORD=rL;twb$~?fhI
+DB_HOST=160.153.16.53
+DB_DATABASE=ibetupco
+DB_USERNAME=ibetupco
+DB_PASSWORD=rL;twb$~?fhI
 
 DB_HOST=localhost
 DB_DATABASE=betportugal
