--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,23 @@
 /public/assets/portal/css/sports.css.map
 /public/assets/portal/js/sports.js
 /public/assets/portal/js/sports.js.map
+/public/assets/portal/js/app.js
+bootstrap/cache/services.json
+public/assets/portal/js/app.js
+public/assets/portal/js/vendor/
+resources/assets/less/buttons.css
+resources/assets/less/footer.css
+resources/assets/less/form.common.css
+resources/assets/less/form.datepicker.css
+resources/assets/less/form.perfil.css
+resources/assets/less/form.registo.css
+resources/assets/less/navbar.css
+resources/assets/less/old.css
+resources/assets/less/old.header.css
+resources/assets/less/plugin.tooltip.css
+resources/assets/less/pop.navbar.css
+resources/assets/less/style.css
+resources/assets/less/tables.css
+resources/assets/less/variables.css
+resources/views/jogadores/
+resources/views/portal/depositar/
