Fix some configs.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
+APP_DEBUG_BAR=false
+APP_DEBUG_CW=false
 APP_KEY=tjjvW1aWv7JPhYtOpsO8xeRrFXo1vlSR
 
 DB_HOST=160.153.16.53
@@ -22,9 +24,13 @@ MAIL_PORT=25
 MAIL_USERNAME=noreply@ibetup.pt
 MAIL_PASSWORD=qwerty123456789
 MAIL_ENCRYPTION=
+MAIL_NAME=BetPortugal
 
 ODDS_SERVER=http://odds.betportugal.pt/
 BET_SUBMIT_DELAY=1
+
+TEST_MAIL=geral@betportugal.pt
+TEST_MAIL_NAME=BetPortugal
 
 SRIJ_COMPANY_CODE=2215
 SRIJ_SELF_EXCLUSION=http://localgate.pt/ListaExcluidos.svc?singleWsdl
