Added Session Domain as Example.

--- a/.env.example
+++ b/.env.example
@@ -18,12 +18,14 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
+SESSION_DOMAIN=betportugal.pt
+
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.ibetup.pt
-MAIL_PORT=25
-MAIL_USERNAME=noreply@ibetup.pt
-MAIL_PASSWORD=qwerty123456789
-MAIL_ENCRYPTION=
+MAIL_HOST=smtp.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=geral@sfponline.pt
+MAIL_PASSWORD=Casino2016
+MAIL_ENCRYPTION=tls
 MAIL_NAME=BetPortugal
 
 ODDS_SERVER=http://odds.betportugal.pt/
