Clean up some code. Clean git ignore file. Added compiled files to git.

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,10 @@
-/storage
-.DS_Store
-/tests/Nyx
 .env
+/tests/Nyx
 /vendor
 /node_modules
+/storage
 /.idea
-/public/design
 
 *error_log
-/public/certifica
-/.gitignore
-/composer.lock
-/composer.phar
-/public/assets/portal/css/portal.css
-/public/assets/portal/css/bet-details.css
-/public/assets/portal/css/bet-details.css.map
-/public/assets/portal/css/portal.css.map
-/public/assets/portal/js/app.js
-bootstrap/cache/services.json
-public/assets/portal/js/vendor/
-resources/assets/less/buttons.css
-resources/assets/less/footer.css
-resources/assets/less/form.common.css
-resources/assets/less/form.datepicker.css
-resources/assets/less/form.perfil.css
-resources/assets/less/form.registo.css
-resources/assets/less/navbar.css
-resources/assets/less/old.css
-resources/assets/less/old.header.css
-resources/assets/less/plugin.tooltip.css
-resources/assets/less/pop.navbar.css
-resources/assets/less/style.css
-resources/assets/less/tables.css
-resources/assets/less/variables.css
-resources/views/jogadores/
-resources/views/portal/depositar/
-/public/assets/portal/css/sports.css
-/public/assets/portal/css/sports.css.map
+*.DS_Store
+composer.lock
