--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,20 @@ APP_DEBUG_BAR=false
 APP_DEBUG_CW=false
 APP_KEY=tjjvW1aWv7JPhYtOpsO8xeRrFXo1vlSR
 
-DB_HOST=160.153.16.53
+DB_HOST=127.0.0.1
 DB_DATABASE=ibetupco
 DB_USERNAME=ibetupco
 DB_PASSWORD=rL;twb$~?fhI
 
-DB_ODDS_HOST=160.153.16.53
+DB_ODDS_HOST=127.0.0.1
 DB_ODDS_DATABASE=betgenius
 DB_ODDS_USERNAME=odds
 DB_ODDS_PASSWORD=Mike#69
+
+DB_DOCS_HOST=127.0.0.1
+DB_DOCS_DATABASE=docs_db
+DB_DOCS_USERNAME=docs_user
+DB_DOCS_PASSWORD=rL;twb$~?fhI
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
