ref #93: Alterar BetPortugal para CasinoPortugal.

--- a/.env.example
+++ b/.env.example
@@ -28,11 +28,11 @@ MAIL_PASSWORD=Casino2016
 MAIL_ENCRYPTION=tls
 MAIL_NAME=BetPortugal
 
-ODDS_SERVER=http://odds.betportugal.pt/
+ODDS_SERVER=http://odds.casinoportugal.pt/
 BET_SUBMIT_DELAY=1
 
-TEST_MAIL=geral@betportugal.pt
-TEST_MAIL_NAME=BetPortugal
+TEST_MAIL=geral@casinoportugal.pt
+TEST_MAIL_NAME=CasinoPortugal
 
 SRIJ_COMPANY_CODE=2215
 SRIJ_SELF_EXCLUSION=http://localgate.pt/ListaExcluidos.svc?singleWsdl
