--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-9",
     "laravel-elixir-webpack-official": "^1.0.5"
+  },
+  "dependencies": {
+    "sweetalert": "^1.1.3"
   }
 }
