ref #94: Fixed force protocol.

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 SESSION_DOMAIN=betportugal.pt
+FORCE_PROTOCOL=true
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.office365.com
