ref #97: Added support to configure Secure Cookies.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_DEBUG=true
+APP_DEBUG=false
 APP_DEBUG_BAR=false
 APP_DEBUG_CW=false
 APP_KEY=tjjvW1aWv7JPhYtOpsO8xeRrFXo1vlSR
@@ -23,7 +23,9 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-SESSION_DOMAIN=betportugal.pt
+SESSION_DOMAIN=www.casinoportugal.pt
+SESSION_SECURE=true
+FORCE_PROTOCOL=true
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.office365.com
