--- a/.env.example
+++ b/.env.example
@@ -33,13 +33,13 @@ MAIL_PORT=587
 MAIL_USERNAME=geral@sfponline.pt
 MAIL_PASSWORD=Casino2016
 MAIL_ENCRYPTION=tls
-MAIL_NAME=BetPortugal
+MAIL_NAME=CasinoPortugal
 
-ODDS_SERVER=http://odds.betportugal.pt/
+ODDS_SERVER=https://odds.casinoportugal.pt/
 BET_SUBMIT_DELAY=1
 
-TEST_MAIL=geral@betportugal.pt
-TEST_MAIL_NAME=BetPortugal
+TEST_MAIL=geral@casinoportugal.pt
+TEST_MAIL_NAME=CasinoPortugal
 
 SRIJ_WS_ACTIVE=true
 SRIJ_COMPANY_CODE=2215
