ref #105: Alterar o referencias a ibetup para casino portugal.

--- a/.env.example
+++ b/.env.example
@@ -5,19 +5,19 @@ APP_DEBUG_CW=false
 APP_KEY=tjjvW1aWv7JPhYtOpsO8xeRrFXo1vlSR
 
 DB_HOST=127.0.0.1
-DB_DATABASE=ibetupco
-DB_USERNAME=ibetupco
-DB_PASSWORD=rL;twb$~?fhI
+DB_DATABASE=main
+DB_USERNAME=server-x
+DB_PASSWORD=pass-x
 
 DB_ODDS_HOST=127.0.0.1
 DB_ODDS_DATABASE=betgenius
-DB_ODDS_USERNAME=odds
-DB_ODDS_PASSWORD=Mike#69
+DB_ODDS_USERNAME=server-x
+DB_ODDS_PASSWORD=pass-x
 
 DB_DOCS_HOST=127.0.0.1
 DB_DOCS_DATABASE=docs_db
-DB_DOCS_USERNAME=docs_user
-DB_DOCS_PASSWORD=rL;twb$~?fhI
+DB_DOCS_USERNAME=server-x
+DB_DOCS_PASSWORD=pass-x
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
