--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "graham-campbell/exceptions": "^8.3",
         "filp/whoops": "^2.1",
         "tymon/jwt-auth": "0.5.*",
-        "doctrine/dbal": "v2.5.*"
+        "doctrine/dbal": "v2.5.*",
+        "anchu/ftp": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
