--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-9",
-    "laravel-elixir-webpack-official": "^1.0.5"
+    "laravel-elixir-webpack-official": "^1.0.5",
+    "raw-loader": "^0.5.1"
   },
   "dependencies": {
     "autonumeric": "^1.9.46",
