--- a/.env.example
+++ b/.env.example
@@ -43,5 +43,5 @@ TEST_MAIL_NAME=CasinoPortugal
 
 SRIJ_WS_ACTIVE=true
 SRIJ_COMPANY_CODE=005
-SRIJ_SELF_EXCLUSION=http://localgate.pt/ListaExcluidos.svc?singleWsdl
-SRIJ_IDENTITY=http://localgate.pt/ListaVerificaIdentidade.svc?singleWsdl
+SRIJ_SELF_EXCLUSION=http://172.25.10.2:8021/SRJ/Excluidos/ListaExcluidos?wsdl
+SRIJ_IDENTITY=http://172.25.10.3:8021/SRJ/Mediacao/ValidacaoIdentidade?wsdl
