--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "filp/whoops": "^2.1",
         "tymon/jwt-auth": "0.5.*",
         "doctrine/dbal": "v2.5.*",
-        "anchu/ftp": "~2.0"
+        "anchu/ftp": "~2.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
