--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-9",
+    "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.5",
+    "vue": "^2.0.1",
+    "vue-router": "^2.0.2",
     "raw-loader": "^0.5.1"
   },
   "dependencies": {
