ref #129: add casino env variables

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ DB_DOCS_DATABASE=docs_db
 DB_DOCS_USERNAME=server-x
 DB_DOCS_PASSWORD=pass-x
 
+DB_CASINO_DATABASE=betcasino
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
@@ -37,6 +39,9 @@ MAIL_NAME=CasinoPortugal
 
 ODDS_SERVER=https://odds.casinoportugal.pt/
 BET_SUBMIT_DELAY=1
+
+CASINO_LOBBY=http://test.dev.casinoportugal.pt/
+ISOFTBET_LAUNCHER=https://stage-game-launcher-lux.isoftbet.com/191/
 
 TEST_MAIL=geral@casinoportugal.pt
 TEST_MAIL_NAME=CasinoPortugal
