ref #129: add casino availability flag

--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,6 @@ DB_DOCS_DATABASE=docs_db
 DB_DOCS_USERNAME=server-x
 DB_DOCS_PASSWORD=pass-x
 
-DB_CASINO_DATABASE=betcasino
-
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
@@ -40,8 +38,10 @@ MAIL_NAME=CasinoPortugal
 ODDS_SERVER=https://odds.casinoportugal.pt/
 BET_SUBMIT_DELAY=1
 
+DB_CASINO_DATABASE=betcasino
 CASINO_LOBBY=http://test.dev.casinoportugal.pt/
 ISOFTBET_LAUNCHER=https://stage-game-launcher-lux.isoftbet.com/191/
+CASINO_AVAILABLE=0
 
 TEST_MAIL=geral@casinoportugal.pt
 TEST_MAIL_NAME=CasinoPortugal
