--- a/.env.example
+++ b/.env.example
@@ -28,10 +28,10 @@ SESSION_SECURE=true
 FORCE_PROTOCOL=true
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.office365.com
-MAIL_PORT=587
-MAIL_USERNAME=geral@sfponline.pt
-MAIL_PASSWORD=Casino2016
+MAIL_HOST=smtp.ptempresas.pt
+MAIL_PORT=993
+MAIL_USERNAME=naoresponder@casinoportugal.pt
+MAIL_PASSWORD=Wj152%OqUB
 MAIL_ENCRYPTION=tls
 MAIL_NAME=CasinoPortugal
 
