--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ SRIJ_WS_ACTIVE=true
 SRIJ_COMPANY_CODE=005
 SRIJ_SELF_EXCLUSION=http://172.25.10.2:8021/SRJ/Excluidos/ListaExcluidos?wsdl
 SRIJ_IDENTITY=http://172.25.10.3:8021/SRJ/Mediacao/ValidacaoIdentidade?wsdl
+
+SERVER_URL=https://www.casinoportugal.pt/
+BALANCE_LOOP=5000
