--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     },
     "autoload-dev": {
         "classmap": [
+            "tests/Bonus/BaseBonusTest.php",
             "tests/TestCase.php"
+
         ]
     },
     "scripts": {
