Ignoring Bundle files.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 
 *error_log
 *.DS_Store
+
+/public/assets/portal/css/app.*
+/public/assets/portal/css/casino.*
+/public/assets/portal/css/sports.*
+/public/assets/portal/css/style.*
+/public/assets/portal/js/app.*
+/public/assets/portal/js/bundle.*
+/public/assets/portal/js/casino.*
