--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "laravel-elixir": "^6.0.0-9",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.5",
+    "raw-loader": "^0.5.1",
     "vue": "^2.0.1",
-    "vue-router": "^2.0.2",
-    "raw-loader": "^0.5.1"
+    "vue-router": "^2.0.2"
   },
   "dependencies": {
     "autonumeric": "^1.9.46",
     "rxjs": "^5.1.0",
+    "rxjs-es": "^5.0.0-beta.12",
     "sweetalert": "^1.1.3"
   }
 }
