--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autonumeric": "^1.9.46",
     "rxjs": "^5.1.0",
     "rxjs-es": "^5.0.0-beta.12",
-    "sweetalert": "^1.1.3"
+    "sweetalert": "^1.1.3",
+    "vuex": "^2.2.1"
   }
 }
