ref #192: Fix popup in private mode for IOS & Set promotions image path

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,5 @@ SRIJ_IDENTITY=http://172.25.10.3:8021/SRJ/Mediacao/ValidacaoIdentidade?wsdl
 
 SERVER_URL=https://www.casinoportugal.pt/
 BALANCE_LOOP=5000
+
+PROMOTIONS_IMAGES_PATH=assets/portal/img/promotions
