#200: Add support to specify a different username from the "From".

--- a/.env.example
+++ b/.env.example
@@ -28,12 +28,13 @@ SESSION_SECURE=true
 FORCE_PROTOCOL=true
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.ptempresas.pt
+MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
-MAIL_USERNAME=naoresponder@casinoportugal.pt
-MAIL_PASSWORD=Wj152%OqUB
+MAIL_FROM=naoresponder@casinoportugal.pt
+MAIL_USERNAME=Sfponline
+MAIL_PASSWORD=---
 MAIL_ENCRYPTION=tls
-MAIL_NAME=CasinoPortugal
+MAIL_NAME=Casino Portugal
 
 ODDS_SERVER=https://odds.casinoportugal.pt/
 BET_SUBMIT_DELAY=1
