#215: Added configuration to change logs location.

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,8 @@ SRIJ_COMPANY_CODE=005
 SRIJ_SELF_EXCLUSION=http://172.25.10.2:8021/SRJ/Excluidos/ListaExcluidos?wsdl
 SRIJ_IDENTITY=http://172.25.10.3:8021/SRJ/Mediacao/ValidacaoIdentidade?wsdl
 
+LOGS_FILE_PATH=/public_html/logs/www.log
+LOG_MAX_FILES=5
 SERVER_URL=https://www.casinoportugal.pt/
 BALANCE_LOOP=5000
 
