--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,7 @@ SERVER_URL=https://www.casinoportugal.pt/
 BALANCE_LOOP=5000
 
 PROMOTIONS_IMAGES_PATH=assets/portal/img/promotions
+
+NETENT_WSDL=app/Netent/netent.wsdl
+NETENT_MERCHANT_ID=testMerchant
+NETENT_MERCHANT_PASSWORD=testing
