--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,8 @@ BALANCE_LOOP=5000
 
 PROMOTIONS_IMAGES_PATH=assets/portal/img/promotions
 
-NETENT_WSDL=app/Netent/netent.wsdl
+NETENT_WSDL=/public_html/mt/front2/app/Netent/netent.wsdl
 NETENT_MERCHANT_ID=testMerchant
 NETENT_MERCHANT_PASSWORD=testing
+NETENT_STATIC_SERVER=https://casinoportugal-static-test.casinomodule.com
+NETENT_GAME_SERVER=https://casinoportugal-game-test.casinomodule.com
