#307: Add support for .env.

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,7 @@ SERVER_URL=https://www.casinoportugal.pt/
 BALANCE_LOOP=5000
 
 PROMOTIONS_IMAGES_PATH=assets/portal/img/promotions
+
+PAYMENTS_PAYPAL=live
+PAYMENTS_SWIFT=live
+PAYMENTS_MEO_WALLET=production
