ref #322: betvalidator for tests

--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,8 @@
     "autoload-dev": {
         "classmap": [
             "tests/Bonus/BaseBonusTest.php",
+            "tests/Bonus/BetValidator.php",
             "tests/TestCase.php"
-
         ]
     },
     "scripts": {
