ref #330: production launcher

--- a/.env.example
+++ b/.env.example
@@ -40,8 +40,8 @@ ODDS_SERVER=https://odds.casinoportugal.pt/
 BET_SUBMIT_DELAY=1
 
 DB_CASINO_DATABASE=betcasino
-CASINO_LOBBY=http://test.dev.casinoportugal.pt/
-ISOFTBET_LAUNCHER=https://stage-game-launcher-lux.isoftbet.com/191/
+CASINO_LOBBY=https://www.casinoportugal.pt/
+ISOFTBET_LAUNCHER=https://game-launcher-lux.isoftbet.com/191/
 CASINO_AVAILABLE=0
 
 TEST_MAIL=geral@casinoportugal.pt
