ref #330: fix url

--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,7 @@ ODDS_SERVER=https://odds.casinoportugal.pt/
 BET_SUBMIT_DELAY=1
 
 DB_CASINO_DATABASE=betcasino
-CASINO_LOBBY=https://www.casinoportugal.pt/
+CASINO_LOBBY=https://www.casinoportugal.pt/casino/
 ISOFTBET_LAUNCHER=https://game-launcher-lux.isoftbet.com/191/
 CASINO_AVAILABLE=0
 
