#401: Adding CACHE_IP to memcached.

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ DB_DOCS_USERNAME=server-x
 DB_DOCS_PASSWORD=pass-x
 
 CACHE_DRIVER=file
+CACHE_IP=127.0.0.1
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
