--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "autonumeric": "^1.9.46",
     "babel-polyfill": "^6.23.0",
+    "cookies-js": "^1.2.3",
     "ismobilejs": "^0.4.1",
     "rxjs": "^5.1.0",
     "rxjs-es": "^5.0.0-beta.12",
