#434 Remove Address from website

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,5 @@ NETENT_MERCHANT_ID=testMerchant
 NETENT_MERCHANT_PASSWORD=testing
 NETENT_STATIC_SERVER=https://casinoportugal-static-test.casinomodule.com
 NETENT_GAME_SERVER=https://casinoportugal-game-test.casinomodule.com
+
+ADDRESS_REQUIRED=0
