#462 add controller api

--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,5 @@ NETENT_STATIC_SERVER=https://casinoportugal-static-test.casinomodule.com
 NETENT_GAME_SERVER=https://casinoportugal-game-test.casinomodule.com
 
 ADDRESS_REQUIRED=0
+
+CORE_API_URL=http://127.0.0.1:10500
