--- a/.env.example
+++ b/.env.example
@@ -70,4 +70,4 @@ NETENT_GAME_SERVER=https://casinoportugal-game-test.casinomodule.com
 
 ADDRESS_REQUIRED=0
 
-CORE_API_URL=http://127.0.0.1:10500
+CORE_API_URL=https://aa381523-0b6b-44ca-ac39-ce18918bae4c.mock.pstmn.io
