#491: Clean Code and do some changes as asked in code review

--- a/.env.example
+++ b/.env.example
@@ -70,4 +70,4 @@ NETENT_GAME_SERVER=https://casinoportugal-game-test.casinomodule.com
 
 ADDRESS_REQUIRED=0
 
-CORE_API_URL=https://api-issue-3-dev.casinoportugal.pt
+CORE_API_URL=http://127.0.0.1:10500
