#509: update on the routes for the api on featured games

--- a/.env.example
+++ b/.env.example
@@ -71,4 +71,4 @@ NETENT_GAME_SERVER=https://casinoportugal-game-test.casinomodule.com
 
 ADDRESS_REQUIRED=0
 
-CORE_API_URL=https://aa381523-0b6b-44ca-ac39-ce18918bae4c.mock.pstmn.io
+CORE_API_URL=http://127.0.0.1:10500
