#519 Adding Captive balance for Deposits over limits.

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,7 @@ PAYMENTS_PAYPAL=live
 PAYMENTS_SWITCH=live
 PAYMENTS_MEO_WALLET=production
 PAYMENTS_PAYSAFECARD=live
+FALLBACK_TO_SWITCH=false
 
 NETENT_WSDL=/public_html/mt/front2/app/Netent/netent.wsdl
 NETENT_MERCHANT_ID=testMerchant
