--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,9 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "platform": {
+            "php": "7.0.24"
+        }
     }
 }
